ocaml/testsuite/tests/jane-modular-syntax/user_error5.compilers.reference
File "user_error5.ml", line 21, characters 27-31:
21 | let _unnamed_extension = [%jane] ();;
                                ^^^^
Error: Cannot have an extension node named [%jane]
